force-app/main/default/objects/blng__TaxRate__c/blng__TaxRate__c.object-meta.xml
<CustomObject>
    <description>Holds the VAT/Tax rates, codes, zones etc</description>
    <label>Tax Rate</label>
    <nameField>
        <label>Tax Identifier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>