force-app/main/default/objects/blng__TaxRate__c/fields/blng__AddressComparison__c.field-meta.xml
<CustomField>
    <fullName>blng__AddressComparison__c</fullName>
    <externalId>true</externalId>
    <label>Address Comparison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>