force-app/main/default/objects/blng__TaxRate__c/fields/blng__City__c.field-meta.xml
<CustomField>
    <fullName>blng__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>