force-app/main/default/objects/blng__TaxRate__c/fields/blng__Country__c.field-meta.xml
<CustomField>
    <fullName>blng__Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__BillingCountry</valueSetName>
    </valueSet>
</CustomField>