force-app/main/default/objects/blng__TaxRate__c/fields/blng__PriorityAddressComparison__c.field-meta.xml
<CustomField>
    <fullName>blng__PriorityAddressComparison__c</fullName>
    <label>Priority Address Comparison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>