force-app/main/default/objects/blng__TaxRate__c/fields/blng__Rate__c.field-meta.xml
<CustomField>
    <fullName>blng__Rate__c</fullName>
    <label>Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>