force-app/main/default/objects/blng__TaxRate__c/listViews/blng__All.listView-meta.xml
<ListView>
    <fullName>blng__All</fullName>
    <columns>NAME</columns>
    <columns>blng__City__c</columns>
    <columns>blng__State__c</columns>
    <columns>blng__ZipCode__c</columns>
    <columns>blng__TaxCode__c</columns>
    <columns>blng__Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>